src/style.less
/*!
Theme Name: Prorenata Wordpress Theme
Theme URI: http://prorenata.se/
Author: Alfred Beckman
Description:
Version: 1.0
*/


@import "https://rsms.me/inter/inter.css";
@import (less) "../node_modules/@prorenata/style-config/css/output.css";
@import "../node_modules/@prorenata/style-config/less/typography";
@import "../node_modules/slick-carousel/slick/slick";

@import "less/grid";
@import "less/hide-show";

// Globals

/*! purgecss start ignore */

:root {
  --fa-primary-color: @color-p500;
  --fa-secondary-color: @color-p900;
  --fa-primary-opacity: 1;
  --fa-secondary-opacity: 1;
}

html {
  background: @color-p500;
}
body {
  background: @color-s100;
  font-feature-settings: 'calt' 1, 'ss01' 0, 'ss02' 0;
  letter-spacing: 0;
  overflow-x: hidden;
}
a {
  color: @color-a900;
  text-decoration: none;
  &:hover {
    color: @color-a700;
    text-decoration: underline;
  }
  &[href*='tel:'] {
    @media screen and (min-width: 35.5em) {
      color: inherit;
    }
  }
}
small {
  font-size: 0.707rem;
  color: @color-s800;
}
h1 {
  font-family: 'Inter', sans-serif;
  font-weight: 700;
}
h2, h3, h4, h5, h6 ,p {
  max-width: 33rem;
  margin-left: auto;
  margin-right: auto;
  strong {
    font-weight: inherit;
  }
}
h5 {
  color: @color-p700;
}
hr.wp-block-separator {
  width: 15rem;
  margin: 2rem auto 3rem;
  background: @color-s500;
  height: 2px;
  border-radius: 4px;
}
.strong {
  font-weight: 700;
}
.text{
  &-small {
    font-size: 0.871rem;
    line-height: 1.25rem;
  }
  &-muted {
    color: @color-dark50;
  }
}
.bg {
  &-a500 { background-color: @color-a500 }
  &-p500 { background-color: @color-p500 }
  &-s300 { background-color: @color-s300 }
  &-s400 { background-color: @color-s400 }
}
.leading {
  font-size: 1.4125rem;
  line-height: 2rem;
  font-weight: 300;
  p {
    max-width: none;
    &:last-child {
      margin-bottom: 0;
    }
  }
}
.letter-spacing-normal {
  letter-spacing: normal;
}
.paper {
  border-radius: .25rem;
  border: 1px solid white;
  background: @color-s100;
  padding: calc(.5rem - 1px) 1rem;
  box-shadow: 0 0 0 1px @color-dark30;
}

/*! purgecss end ignore */

@import "less/btn";
@import "less/logo";
@import "less/quote";
@import "less/table";

// Specifics

@import "less/article";
@import 'less/drawer';
@import "less/footer";
@import 'less/forms';
@import "less/front-page";
@import 'less/modules';
@import "less/navigation";
@import 'less/pricing';
@import 'less/cookie-consent';

